--- a/internals/generators/ams-container/stateless.js.hbs
+++ b/internals/generators/ams-container/stateless.js.hbs
@@ -28,22 +28,19 @@ import messages from './messages';
 {{/if}}
 import './style.scss';
 
-
-const {{ properCase name }} = () => {
-  return (
-    <div className="{{ hyphenCase name }}">
-    {{#if wantHeaders}}
-      <Helmet>
-        <title>{{properCase name}}</title>
-        <meta name="description" content="Description of {{properCase name}}" />
-      </Helmet>
-    {{/if}}
-    {{#if wantMessages}}
-      <FormattedMessage {...messages.header} />
-    {{/if}}
-    </div>
-  );
-}
+const {{ properCase name }} = () => (
+  <div className="{{ hyphenCase name }}">
+  {{#if wantHeaders}}
+    <Helmet>
+      <title>{{properCase name}}</title>
+      <meta name="description" content="Description of {{properCase name}}" />
+    </Helmet>
+  {{/if}}
+  {{#if wantMessages}}
+    <FormattedMessage {...messages.header} />
+  {{/if}}
+  </div>
+);
 
 {{ properCase name }}.propTypes = {
   dispatch: PropTypes.func.isRequired,
